--- a/ora/styles.css
+++ b/ora/styles.css
@@ -271,6 +271,7 @@ notion-navbar__title:hover {
   border-radius: 10px !important;
   transition: transform 0.4s !important;
   transform: scale(1) !important;
+  background: transparent !important;
 }
 
 .notion-collection-card:hover {
